@@ -4,7 +4,8 @@
 	    { "name" : "bulb_mode_press_press", "type": "boolean", "address": "0x178" },
 	    { "name" : "one_push_bracketing", "type": "boolean", "address": "0x17e"},
 	    { "name" : "bulb_timer", "type": "boolean", "address": "0x133"},
-	    { "name" : "bulb_timer_sec", "type": "uint16", "address": "0x134"}
+	    { "name" : "bulb_timer_sec", "type": "uint16", "address": "0x134"},
+	    { "name" : "using_aperture_ring", "type": "boolean", "address": "0x18c"}
 	]
     },
 
