@@ -22,6 +22,7 @@ version 0.84.05
 	Using command 0x02 0x00 for buffer mask (K-70, K-3II)
 	Possibility to specify stdout as output file using -
 	Default mode prints out status info instead of taking a picture
+	using_aperture_ring setting reading for K-70
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
